--- a/src/app/main/components/usuario/usuario.component.html
+++ b/src/app/main/components/usuario/usuario.component.html
@@ -1,7 +1,7 @@
 
 <app-header></app-header>
 <div class="container card scalein animation-duration-1000">
-  <h2>Inventarios de Insumos</h2>
+  <h2>Solicitudes Bienes</h2>
   <p-table class="table__content shadow-9 m-3 surface-card" #dt [value]="listadousuario" dataKey="id" [rows]="10" id="season-tble"
     [showCurrentPageReport]="true"  [paginator]="true" responsiveLayout="scroll"
     currentPageReportTemplate="Datos {first} a {last} de {totalRecords} registros"
