--- a/src/app/menu/layout/header/header.component.html
+++ b/src/app/menu/layout/header/header.component.html
@@ -37,7 +37,7 @@
 
       </li>
       <li>
-        <a routerLink="/departamento" data-bs-toggle="tooltip" data-bs-placement="right" title="departamento">
+        <a routerLink="" data-bs-toggle="tooltip" data-bs-placement="right" title="departamento">
           <i class='bi bi-journal-check'></i>
           <span class="links__name">Formulario Bienes</span>
         </a>
