--- a/src/app/main/components/departamento/departamento.component.html
+++ b/src/app/main/components/departamento/departamento.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container card scalein animation-duration-1000">
-  <h2>Registro de Departamentos</h2>
+  <h2>Inventario GAD</h2>
   <p-table class="table__content shadow-9 m-3 surface-card" #dt [value]="listadodepartamento" dataKey="id" [rows]="10" id="season-tble"
     [showCurrentPageReport]="true"  [paginator]="true" responsiveLayout="scroll"
     currentPageReportTemplate="Datos {first} a {last} de {totalRecords} registros"
